public/stylesheets/style.css
body {
  background-image: url('../images/origiri_Background.png');
  background-repeat: no-repeat;
  background-size: 100% 100%; 
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

#page0 {
  padding: 70px;
  text-align: center;
  font-family: Comic Sans MS,arial,helvetica,sans-serif;
}

#page0 > p {
  font-size: 32px;
} 

#page0 > form {
  font-size: 20px;
}

#loginInfoSubmit {
  font-size: 20px;
}

#nameSpan, #colorSpan {
  font-size: 20px;
  font-family: Comic Sans MS,arial,helvetica,sans-serif;
}

#page1 > table {
  position: absolute;
  left: 15%;
  top: 15%;
  font-size: 20px;
  text-align: center;
  font-family: Comic Sans MS,arial,helvetica,sans-serif;
}

.start_btn {
  position: absolute;
  left: 85%;
  top: 80%;
}

#friendsList {
  width: 150px;
  height: 300px;
}

#fightList {
  width: 150px;
  height: 300px;
}

#chattingRoom {
  width: 350px;
  height: 265px;
}

#enterMessage {
  width: 300px;
  height: 30px;
}

.battle {
  position: absolute;
  left: 50%;
  top: 15%;
}

